--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d5d741e6",
+   "id": "dcf9ea8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a650276",
+   "id": "08f2bbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9caee363",
+   "id": "3295c4d9",
    "metadata": {},
    "outputs": [
     {
@@ -54,11 +54,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbcea753",
+   "execution_count": 12,
+   "id": "39012e50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "2 1\n",
+      "2 4\n",
+      "3 4\n",
+      "3 5\n",
+      "4 2\n",
+      "4 3\n",
+      "4 5\n",
+      "5 3\n",
+      "5 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in graph:\n",
+    "    if graph[i]:\n",
+    "        for j in graph[i]:\n",
+    "            print(i,j)\n",
+    "            ADJ_MAT[i-1][j-1]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5ca4f02e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 0, 0, 0],\n",
+       " [1, 0, 1, 1, 0],\n",
+       " [0, 1, 0, 1, 1],\n",
+       " [0, 1, 1, 0, 1],\n",
+       " [0, 0, 1, 1, 0]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ADJ_MAT"
+   ]
   }
  ],
  "metadata": {
