--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dcf9ea8d",
+   "id": "5ae9d815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08f2bbf6",
+   "id": "d393ec97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3295c4d9",
+   "execution_count": 15,
+   "id": "dc11f37e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        " [0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,24 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "39012e50",
+   "execution_count": 16,
+   "id": "7d548d0d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2\n",
-      "2 1\n",
+      "0 1\n",
+      "1 0\n",
+      "1 3\n",
+      "2 3\n",
       "2 4\n",
+      "3 1\n",
+      "3 2\n",
       "3 4\n",
-      "3 5\n",
       "4 2\n",
-      "4 3\n",
-      "4 5\n",
-      "5 3\n",
-      "5 4\n"
+      "4 3\n"
      ]
     }
    ],
@@ -79,33 +79,55 @@
     "for i in graph:\n",
     "    if graph[i]:\n",
     "        for j in graph[i]:\n",
-    "            print(i,j)\n",
+    "            print(i-1,j-1)\n",
     "            ADJ_MAT[i-1][j-1]=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5ca4f02e",
+   "execution_count": 17,
+   "id": "94e9a859",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[0, 1, 0, 0, 0],\n",
-       " [1, 0, 1, 1, 0],\n",
-       " [0, 1, 0, 1, 1],\n",
+       " [1, 0, 0, 1, 0],\n",
+       " [0, 0, 0, 1, 1],\n",
        " [0, 1, 1, 0, 1],\n",
        " [0, 0, 1, 1, 0]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ADJ_MAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9559a5ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [1], [1], [1], [1]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EIG_MAT=[[1] for _ in range(len(graph))]\n",
+    "EIG_MAT"
    ]
   }
  ],
