--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ae9d815",
+   "id": "c4a7fa61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d393ec97",
+   "id": "9e774994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dc11f37e",
+   "id": "b19d97e4",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7d548d0d",
+   "id": "7e50337e",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "94e9a859",
+   "id": "6d4e93fd",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9559a5ac",
+   "id": "ab605a1a",
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +128,16 @@
    "source": [
     "EIG_MAT=[[1] for _ in range(len(graph))]\n",
     "EIG_MAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc5fa476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EIG_MA"
    ]
   }
  ],
