--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4a7fa61",
+   "id": "37edab84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e774994",
+   "id": "e0d29a12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b19d97e4",
+   "id": "ef2e645b",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e50337e",
+   "id": "39ef48ee",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6d4e93fd",
+   "id": "9642194d",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ab605a1a",
+   "id": "076e0f45",
    "metadata": {},
    "outputs": [
     {
@@ -132,12 +132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dc5fa476",
+   "execution_count": 21,
+   "id": "48190f96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [2]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "EIG_MA"
+    "res=np.dot(ADJ_MAT,EIG_MAT)\n",
+    "res"
    ]
   }
  ],
