--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "37edab84",
+   "id": "4f931840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0d29a12",
+   "id": "ae8a3008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ef2e645b",
+   "id": "266d3e85",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "39ef48ee",
+   "id": "605fc4b4",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9642194d",
+   "id": "238dc954",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "076e0f45",
+   "id": "9d2c6f85",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "48190f96",
+   "id": "48328970",
    "metadata": {},
    "outputs": [
     {
@@ -154,6 +154,18 @@
    "source": [
     "res=np.dot(ADJ_MAT,EIG_MAT)\n",
     "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17cc8812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while norm_val_diff>0.1:\n",
+    "    res=np.dot(ADJ_MAT,EIG_MAT)\n",
+    "    "
    ]
   }
  ],
