--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4f931840",
+   "execution_count": 24,
+   "id": "8963e260",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ae8a3008",
+   "execution_count": 25,
+   "id": "738966a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "266d3e85",
+   "execution_count": 26,
+   "id": "7f7284b3",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +43,7 @@
        " [0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "605fc4b4",
+   "execution_count": 27,
+   "id": "8fb01d17",
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "238dc954",
+   "execution_count": 28,
+   "id": "3a55d5d6",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        " [0, 0, 1, 1, 0]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "9d2c6f85",
+   "execution_count": 29,
+   "id": "455afa52",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
        "[[1], [1], [1], [1], [1]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "48328970",
+   "execution_count": 30,
+   "id": "ea459134",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,14 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17cc8812",
+   "execution_count": 34,
+   "id": "ad8c480e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "while norm_val_diff>0.1:\n",
-    "    res=np.dot(ADJ_MAT,EIG_MAT)\n",
-    "    "
+    "def get_normalized_value(res):\n",
+    "    sum=0\n",
+    "    for n in res:\n",
+    "        sum=sum+(n*n)\n",
+    "    return round(math.sqrt(sum),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a347fa82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=np.dot(ADJ_MAT,EIG_MAT)\n",
+    "norm_val=get_normalized_value(res)\n",
+    "new_res=res/norm_val\n",
+    "print(new_res)\n",
+    "norm_val_diff=0"
    ]
   }
  ],
