--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "74b02dec",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "905a0857",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "127f4936",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        " [0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "5e4f53cf",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "db3e13d4",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        " [0, 0, 1, 1, 0]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "bc1bc4eb",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "[[1], [1], [1], [1], [1]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "038e1177",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "8bc80e07",
    "metadata": {},
    "outputs": [],
@@ -173,42 +173,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe307bd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res=np.dot(ADJ_MAT,EIG_MAT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49b4e22e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "norm_val=get_normalized_value(res)\n",
-    "new_res=res/norm_val\n",
-    "print(new_res)\n",
-    "norm_val_diff=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d8bb1d49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigent vectors @ iteration #1 \n",
+      "[[0.21321962]\n",
+      " [0.42643923]\n",
+      " [0.42643923]\n",
+      " [0.63965885]\n",
+      " [0.42643923]]\n"
+     ]
+    }
+   ],
    "source": [
     "norm_val_diff=float('inf')\n",
+    "old_norm_val=0\n",
+    "i=0\n",
     "while norm_val_diff>0.1:\n",
+    "    i+=1\n",
     "    res=np.dot(ADJ_MAT,EIG_MAT)\n",
     "    norm_val=get_normalized_value(res)\n",
     "    new_res=res/norm_val\n",
-    "    print(new_res)\n",
-    "    norm_val_diff=0\n",
+    "    print(f'Eigent vectors @ iteration #{i} \\n{new_res}')\n",
+    "    norm_val_diff=norm_val-old_norm_val\n",
+    "    old_norm_val=norm_val\n",
     "    "
    ]
   }
