--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "74b02dec",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "905a0857",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "127f4936",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        " [0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "5e4f53cf",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "db3e13d4",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        " [0, 0, 1, 1, 0]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "bc1bc4eb",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "[[1], [1], [1], [1], [1]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "038e1177",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "8bc80e07",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "d8bb1d49",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,22 @@
       " [0.42643923]\n",
       " [0.42643923]\n",
       " [0.63965885]\n",
-      " [0.42643923]]\n"
+      " [0.42643923]]\n",
+      "4.69 0\n",
+      "Eigent vectors @ iteration #2 \n",
+      "[[0.19427755]\n",
+      " [0.38855511]\n",
+      " [0.48569389]\n",
+      " [0.58283266]\n",
+      " [0.48569389]]\n",
+      "2.195 4.69\n",
+      "Eigent vectors @ iteration #3 \n",
+      "[[0.17573727]\n",
+      " [0.35147454]\n",
+      " [0.4832775 ]\n",
+      " [0.61508045]\n",
+      " [0.4832775 ]]\n",
+      "2.211 2.195\n"
      ]
     }
    ],
@@ -200,9 +215,10 @@
     "    norm_val=get_normalized_value(res)\n",
     "    new_res=res/norm_val\n",
     "    print(f'Eigent vectors @ iteration #{i} \\n{new_res}')\n",
-    "    norm_val_diff=norm_val-old_norm_val\n",
+    "    print(norm_val,old_norm_val)\n",
+    "    norm_val_diff=abs(norm_val-old_norm_val)\n",
     "    old_norm_val=norm_val\n",
-    "    "
+    "    EIG_MAT=new_res"
    ]
   }
  ],
