--- a/Eigen vector centrality.ipynb
+++ b/Eigen vector centrality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "74b02dec",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "905a0857",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "127f4936",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        " [0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "5e4f53cf",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "db3e13d4",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        " [0, 0, 1, 1, 0]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "id": "bc1bc4eb",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "[[1], [1], [1], [1], [1]]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "038e1177",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "8bc80e07",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "d8bb1d49",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,14 @@
       " [0.4832775 ]\n",
       " [0.61508045]\n",
       " [0.4832775 ]]\n",
-      "2.211 2.195\n"
+      "2.211 2.195\n",
+      "Eigent vectors @ iteration #4 \n",
+      "[[0.15882266]\n",
+      " [0.35735098]\n",
+      " [0.49632081]\n",
+      " [0.59558497]\n",
+      " [0.49632081]]\n",
+      "2.213 2.211\n"
      ]
     }
    ],
@@ -209,7 +216,7 @@
     "norm_val_diff=float('inf')\n",
     "old_norm_val=0\n",
     "i=0\n",
-    "while norm_val_diff>0.1:\n",
+    "while norm_val_diff>0.01:\n",
     "    i+=1\n",
     "    res=np.dot(ADJ_MAT,EIG_MAT)\n",
     "    norm_val=get_normalized_value(res)\n",
